# LucasEvaristoAdvocacia

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  entrypoint.sh  init_db.py  pyproject.toml  railway.toml  requirements.txt
advocacia_app/core/: auth_db.py  auth_users.py  config.py  content_db.py  content_store.py
advocacia_app/routers/: admin.py  audit.py  conteudo.py  health.py  imagens.py  site.py
advocacia_app/schemas/: conteudo.py  users.py
static/: style.css
templates/: admin.html  index.html  login.html  sobre-nos.html
